crates/ty_python_semantic/resources/mdtest/snapshots/return_type.md_-_Function_return_type_-_Invalid_implicit_ret…_(3d2d19aa49b28f1c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: return_type.md - Function return type - Invalid implicit return type always None
mdtest path: crates/ty_python_semantic/resources/mdtest/function/return_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | # error: [invalid-return-type] "Function always implicitly return `None`, which is not assignable to return type `int`"
2 | def f() -> int:
3 |     print("hello")
```

# Diagnostics

```
error[invalid-return-type]: Function always implicitly return `None`, which is not assignable to return type `int`
 --> src/mdtest_snippet.py:2:12
  |
1 | # error: [invalid-return-type] "Function always implicitly return `None`, which is not assignable to return type `int`"
2 | def f() -> int:
  |            ^^^
3 |     print("hello")
  |
info: Consider changing your return annotation to `-> None`
info: rule `invalid-return-type` is enabled by default

```
